# Six-qui-prend

./: .gitignore  CMakeLists.txt  README.md
Client/: CMakeLists.txt  Client
Client/src/: main.c
Common/: CMakeLists.txt
Common/include/: Cards.h  Clients.h  Connect.h  Messages.h  Players.h  Types.h
Common/src/: Cards.c  Clients.c  Connect.c  Messages.c  Players.c
IA/: CMakeLists.txt  IA
IA/include/: Behaviour.h  Helper.h
IA/src/: Behaviour.c  Helper.c  main.c
Server/: CMakeLists.txt  Server
Server/include/: Game.h
Server/src/: Game.c  main.c
StatMaker/: CMakeLists.txt  StatMaker
StatMaker/src/: main.c
